# Copyright (C) 2005-2011 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	10008_01_realmd_realmd_db_version.sql \
	10148_01_mangos_mangos_string.sql \
	10156_01_characters_character_aura.sql \
	10156_02_characters_pet_aura.sql \
	10156_03_mangos_spell_proc_event.sql \
	10159_01_mangos_spell_proc_event.sql \
	10160_01_characters_character_aura.sql \
	10160_02_characters_pet_aura.sql \
	10171_01_mangos_mangos_string.sql \
	10197_01_mangos_playercreateinfo.sql \
	10203_01_mangos_item_template.sql \
	10205_01_mangos_spell_area.sql \
	10207_01_mangos_npc_vendor.sql \
	10208_01_mangos_playercreateinfo.sql \
	10217_01_mangos_playercreateinfo_spell.sql \
	10217_02_mangos_playercreateinfo_action.sql \
	10217_03_mangos_spell_learn_spell.sql \
	10217_04_mangos_spell_chain.sql \
	10217_05_mangos_spell_proc_event.sql \
	10219_01_mangos_spell_proc_event.sql \
	10223_01_mangos_spell_proc_event.sql \
	10237_01_mangos_spell_bonus_data.sql \
	10244_01_mangos_command.sql \
	10251_01_mangos_command.sql \
	10252_01_mangos_reputation_reward_rate.sql \
	10254_01_characters_auctionhouse.sql \
	10256_01_mangos_command.sql \
	10257_01_mangos_command.sql \
	10263_01_mangos_pool_creature.sql \
	10263_02_mangos_pool_gameobject.sql \
	10263_03_mangos_pool_pool.sql \
	10270_01_mangos_reputation_spillover_template.sql \
	10286_01_mangos_creature_addon.sql \
	10289_01_mangos_creature_template.sql \
	10289_02_mangos_creature_model_info.sql \
	10299_01_mangos_event_id_scripts.sql \
	10307_01_mangos_instance_template.sql \
	10307_02_mangos_scripted_areatrigger.sql \
	10307_03_mangos_scripted_event_id.sql \
	10312_01_characters_character_aura.sql \
	10312_02_characters_pet_aura.sql \
	10314_01_mangos_mangos_string.sql \
	10314_02_mangos_command.sql \
	10323_01_mangos_mangos_string.sql \
	10323_02_mangos_command.sql \
	10331_01_mangos_mangos_string.sql \
	10331_02_mangos_command.sql \
	10332_01_characters_character_aura.sql \
	10332_02_characters_pet_aura.sql \
	10342_01_mangos_mangos_string.sql \
	10342_02_mangos_command.sql \
	10349_01_mangos_spell_proc_event.sql \
	10350_02_mangos_command.sql \
	10353_01_mangos_mangos_string.sql \
	10353_02_mangos_command.sql \
	10362_01_mangos_creature_movement_template.sql \
	10365_01_mangos_creature_ai_scripts.sql \
	10381_01_mangos_creature_model_race.sql \
	10400_01_mangos_mangos_string.sql \
	10409_01_mangos_spell_chain.sql \
	10409_02_mangos_spell_proc_event.sql \
	10410_01_mangos_spell_chain.sql \
	10411_01_mangos_spell_proc_event.sql \
	10416_01_mangos_spell_proc_event.sql \
	10419_01_mangos_spell_chain.sql \
	10422_01_mangos_spell_proc_event.sql \
	10423_01_mangos_spell_chain.sql \
	10427_01_mangos_spell_proc_event.sql \
	10430_01_mangos_spell_chain.sql \
	10454_01_mangos_spell_proc_event.sql \
	10457_01_mangos_spell_proc_event.sql \
	10500_01_mangos_scripts.sql \
	10503_01_characters_creature_respawn.sql \
	10503_02_characters_gameobject_respawn.sql \
	10503_03_mangos_creature_respawn.sql \
	10503_04_mangos_gameobject_respawn.sql \
	10537_01_mangos_command.sql \
	10551_01_mangos_spell_proc_event.sql \
	10568_01_characters_character_tutorial.sql \
	10582_01_mangos_spell_proc_event.sql \
	10604_01_mangos_spell_proc_event.sql \
	10621_01_mangos_quest_template.sql \
	10628_01_mangos_mangos_string.sql \
	10629_01_mangos_mangos_string.sql \
	10654_01_mangos_game_event_creature_quest.sql \
	10655_01_characters_character_queststatus_monthly.sql \
	10660_01_mangos_game_event_quest.sql \
	10662_01_characters_item_loot.sql \
	10664_01_characters_arena_team_stats.sql \
	10679_01_mangos_npc_vendor_template.sql \
	10679_02_mangos_creature_template.sql \
	10682_01_mangos_item_convert.sql \
	10704_01_mangos_gossip_menu_option.sql \
	10742_01_mangos_spell_bonus_data.sql \
	10743_01_mangos_spell_chain.sql \
	10743_02_mangos_spell_bonus_data.sql \
	10746_01_mangos_mangos_string.sql \
	10749_01_mangos_mangos_string.sql \
	10762_01_mangos_spell_proc_event.sql \
	10764_01_mangos_spell_proc_event.sql \
	10786_01_mangos_spell_proc_item_enchant.sql \
	10786_02_mangos_spell_proc_event.sql \
	10788_01_mangos_creature_addon.sql \
	10788_02_mangos_creature_template_addon.sql \
	10835_01_mangos_spell_proc_event.sql \
	10862_01_characters_mail.sql \
	10863_01_mangos_spell_proc_event.sql \
	10864_01_mangos_spell_proc_event.sql \
	10867_01_mangos_npc_trainer_template.sql \
	10867_02_mangos_creature_template.sql \
	10883_01_mangos_spell_proc_event.sql \
	10906_01_mangos_spell_proc_event.sql \
	10906_02_mangos_spell_bonus_data.sql \
	10932_01_mangos_game_event_creature_data.sql \
	10945_01_mangos_mangos_string.sql \
	10946_01_mangos_spell_proc_event.sql \
	10949_01_mangos_mangos_string.sql \
	10950_01_mangos_mangos_string.sql \
	10951_01_mangos_spell_proc_event.sql \
	10972_01_mangos_command.sql \
	10973_01_characters_game_event_status.sql \
	10973_01_mangos_game_event_mail.sql \
	10988_01_mangos_mangos_string.sql \
	10989_01_mangos_loot_template.sql \
	10993_01_mangos_loot_template.sql \
	10998_01_mangos_spell_proc_event.sql \
	11002_01_mangos_spell_proc_event.sql \
	11018_01_mangos_command.sql \
	11023_01_mangos_spell_threat.sql \
	11036_01_mangos_spell_threat.sql \
	11040_01_mangos_spell_chain.sql \
	11040_02_mangos_spell_bonus_data.sql \
	11058_01_mangos_spell_proc_event.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	10008_01_realmd_realmd_db_version.sql \
	10148_01_mangos_mangos_string.sql \
	10156_01_characters_character_aura.sql \
	10156_02_characters_pet_aura.sql \
	10156_03_mangos_spell_proc_event.sql \
	10159_01_mangos_spell_proc_event.sql \
	10160_01_characters_character_aura.sql \
	10160_02_characters_pet_aura.sql \
	10171_01_mangos_mangos_string.sql \
	10197_01_mangos_playercreateinfo.sql \
	10203_01_mangos_item_template.sql \
	10205_01_mangos_spell_area.sql \
	10207_01_mangos_npc_vendor.sql \
	10208_01_mangos_playercreateinfo.sql \
	10217_01_mangos_playercreateinfo_spell.sql \
	10217_02_mangos_playercreateinfo_action.sql \
	10217_03_mangos_spell_learn_spell.sql \
	10217_04_mangos_spell_chain.sql \
	10217_05_mangos_spell_proc_event.sql \
	10219_01_mangos_spell_proc_event.sql \
	10223_01_mangos_spell_proc_event.sql \
	10237_01_mangos_spell_bonus_data.sql \
	10244_01_mangos_command.sql \
	10251_01_mangos_command.sql \
	10252_01_mangos_reputation_reward_rate.sql \
	10254_01_characters_auctionhouse.sql \
	10256_01_mangos_command.sql \
	10257_01_mangos_command.sql \
	10263_01_mangos_pool_creature.sql \
	10263_02_mangos_pool_gameobject.sql \
	10263_03_mangos_pool_pool.sql \
	10270_01_mangos_reputation_spillover_template.sql \
	10286_01_mangos_creature_addon.sql \
	10289_01_mangos_creature_template.sql \
	10289_02_mangos_creature_model_info.sql \
	10299_01_mangos_event_id_scripts.sql \
	10307_01_mangos_instance_template.sql \
	10307_02_mangos_scripted_areatrigger.sql \
	10307_03_mangos_scripted_event_id.sql \
	10312_01_characters_character_aura.sql \
	10312_02_characters_pet_aura.sql \
	10314_01_mangos_mangos_string.sql \
	10314_02_mangos_command.sql \
	10323_01_mangos_mangos_string.sql \
	10323_02_mangos_command.sql \
	10331_01_mangos_mangos_string.sql \
	10331_02_mangos_command.sql \
	10332_01_characters_character_aura.sql \
	10332_02_characters_pet_aura.sql \
	10342_01_mangos_mangos_string.sql \
	10342_02_mangos_command.sql \
	10349_01_mangos_spell_proc_event.sql \
	10350_02_mangos_command.sql \
	10353_01_mangos_mangos_string.sql \
	10353_02_mangos_command.sql \
	10362_01_mangos_creature_movement_template.sql \
	10365_01_mangos_creature_ai_scripts.sql \
	10381_01_mangos_creature_model_race.sql \
	10400_01_mangos_mangos_string.sql \
	10409_01_mangos_spell_chain.sql \
	10409_02_mangos_spell_proc_event.sql \
	10410_01_mangos_spell_chain.sql \
	10411_01_mangos_spell_proc_event.sql \
	10416_01_mangos_spell_proc_event.sql \
	10419_01_mangos_spell_chain.sql \
	10422_01_mangos_spell_proc_event.sql \
	10423_01_mangos_spell_chain.sql \
	10427_01_mangos_spell_proc_event.sql \
	10430_01_mangos_spell_chain.sql \
	10454_01_mangos_spell_proc_event.sql \
	10457_01_mangos_spell_proc_event.sql \
	10500_01_mangos_scripts.sql \
	10503_01_characters_creature_respawn.sql \
	10503_02_characters_gameobject_respawn.sql \
	10503_03_mangos_creature_respawn.sql \
	10503_04_mangos_gameobject_respawn.sql \
	10537_01_mangos_command.sql \
	10551_01_mangos_spell_proc_event.sql \
	10568_01_characters_character_tutorial.sql \
	10582_01_mangos_spell_proc_event.sql \
	10604_01_mangos_spell_proc_event.sql \
	10621_01_mangos_quest_template.sql \
	10628_01_mangos_mangos_string.sql \
	10629_01_mangos_mangos_string.sql \
	10654_01_mangos_game_event_creature_quest.sql \
	10655_01_characters_character_queststatus_monthly.sql \
	10660_01_mangos_game_event_quest.sql \
	10662_01_characters_item_loot.sql \
	10664_01_characters_arena_team_stats.sql \
	10679_01_mangos_npc_vendor_template.sql \
	10679_02_mangos_creature_template.sql \
	10682_01_mangos_item_convert.sql \
	10704_01_mangos_gossip_menu_option.sql \
	10742_01_mangos_spell_bonus_data.sql \
	10743_01_mangos_spell_chain.sql \
	10743_02_mangos_spell_bonus_data.sql \
	10746_01_mangos_mangos_string.sql \
	10749_01_mangos_mangos_string.sql \
	10762_01_mangos_spell_proc_event.sql \
	10764_01_mangos_spell_proc_event.sql \
	10786_01_mangos_spell_proc_item_enchant.sql \
	10786_02_mangos_spell_proc_event.sql \
	10788_01_mangos_creature_addon.sql \
	10788_02_mangos_creature_template_addon.sql \
	10835_01_mangos_spell_proc_event.sql \
	10862_01_characters_mail.sql \
	10863_01_mangos_spell_proc_event.sql \
	10864_01_mangos_spell_proc_event.sql \
	10867_01_mangos_npc_trainer_template.sql \
	10867_02_mangos_creature_template.sql \
	10883_01_mangos_spell_proc_event.sql \
	10906_01_mangos_spell_proc_event.sql \
	10906_02_mangos_spell_bonus_data.sql \
	10932_01_mangos_game_event_creature_data.sql \
	10945_01_mangos_mangos_string.sql \
	10946_01_mangos_spell_proc_event.sql \
	10949_01_mangos_mangos_string.sql \
	10950_01_mangos_mangos_string.sql \
	10951_01_mangos_spell_proc_event.sql \
	10972_01_mangos_command.sql \
	10973_01_characters_game_event_status.sql \
	10973_01_mangos_game_event_mail.sql \
	10988_01_mangos_mangos_string.sql \
	10989_01_mangos_loot_template.sql \
	10993_01_mangos_loot_template.sql \
	10998_01_mangos_spell_proc_event.sql \
	11002_01_mangos_spell_proc_event.sql \
	11018_01_mangos_command.sql \
	11023_01_mangos_spell_threat.sql \
	11036_01_mangos_spell_threat.sql \
	11040_01_mangos_spell_chain.sql \
	11040_02_mangos_spell_bonus_data.sql \
	11058_01_mangos_spell_proc_event.sql \
	README
