##----------------------------------------------------------------------------
##       $Id: Makefile.am 80826 2008-03-04 14:51:23Z wotte $
##
##       Makefile for the Token tests
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = \
  collection  \
  deadlock  \
  invariant  \
  manual  \
  mutex  \
  rw_lock
